Configuração da api graphql

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "graphql-yoga": "1.17.4",
     "prisma-client-lib": "1.28.3"
   }
 }
