--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -8,7 +8,9 @@ services:
       - "4000:4000"
     environment:
       PRISMA_ENDPOINT: http://prisma:4466
-    command: yarn start
+    command: npm run dev
+    volumes: 
+      - .:/usr/app
 
   prisma:
     image: prismagraphql/prisma:1.27
