--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index"
+    "start": "node src/index",
+    "dev": "npx nodemon --delay 1000ms --ext js,graphql src/index"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "graphql-yoga": "1.17.4",
+    "prisma-binding": "~2.3",
     "prisma-client-lib": "1.28.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
