--- a/backend/prisma/prisma.yml
+++ b/backend/prisma/prisma.yml
@@ -4,3 +4,8 @@ datamodel: datamodel.prisma
 generate:
   - generator: javascript-client
     output: ./../src/generated/prisma-client
+  - generator: graphql-schema
+    output: ./../src/generated/graphql-schema
+hooks:
+  post-deploy:
+    -prisma generate
