--- a/backend/prisma/prisma.yml
+++ b/backend/prisma/prisma.yml
@@ -5,7 +5,7 @@ generate:
   - generator: javascript-client
     output: ./../src/generated/prisma-client
   - generator: graphql-schema
-    output: ./../src/generated/graphql-schema
+    output: ./../src/generated/graphql-schema/prisma.graphql
 hooks:
   post-deploy:
     -prisma generate
