--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     environment:
       PRISMA_ENDPOINT: http://prisma:4466
       JWT_SECRET: ${JWT_SECRET}
+      PRISMA_SERVICE: ${PRISMA_SERVICE}
+      PRISMA_STAGE: ${PRISMA_STAGE}
     command: npm run dev
     volumes: 
       - .:/usr/app
@@ -29,12 +31,13 @@ services:
             user: prisma
             password: prisma
             migrations: true
+            rawAccess: true
 
   postgres:
     image: postgres:10.3
     restart: always
     ports:
-      - "5432:5432"
+      - "5433:5432"
     environment:
       POSTGRES_USER: prisma
       POSTGRES_PASSWORD: prisma
