--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apollo-boost": "^0.4.9",
     "core-js": "^3.6.5",
+    "graphql": "^15.5.0",
     "material-design-icons-iconfont": "6.1.0",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
@@ -34,6 +36,7 @@
     "node-sass": "^4.12.0",
     "sass": "^1.32.0",
     "sass-loader": "^10.0.0",
+    "vue-cli-plugin-apollo": "^0.22.2",
     "vue-cli-plugin-vuetify": "~2.4.0",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.7.0"
